fix: styles error with notFound page and productCard alignment

--- a/src/styles/productcard.scss
+++ b/src/styles/productcard.scss
@@ -1,6 +1,7 @@
 @import url('./global.css');
 .product-card {
     width: 240px;
+    margin: auto;
 }
 
 .product-card img {
